made a desktop of the detailed-card-developer and favorite-objects pages

--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -38,6 +38,7 @@ body {
 @import './pages/property-map-page';
 @import './pages/developers-page';
 @import './pages/detailed-card-developer-page';
+@import './pages/favorite-objects-page';
 
 @import './parts/layouts';
 @import './parts/components';
