--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -33,3 +33,9 @@
 @import './components/developer';
 @import './components/banner';
 @import './components/master-plan';
+@import './components/documentation';
+@import './components/customer-reviews';
+@import './components/impressions';
+@import './components/review';
+@import './components/objects';
+@import './components/layouts';
