--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -122,13 +122,35 @@ a {
     }
 
     &__link {
+        position: relative;
         font-size: 20px;
         border-bottom: 1px solid;
         border-bottom-color: transparent;
+        padding-left: 35px;
         transition: border-bottom $transition-time;
 
         &:hover {
             border-bottom-color: $navy-blue;
+        }
+
+        &.desktop {
+            &::before {
+                content: '✔';
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+
+        &.mobile {
+            &::after {
+                content: '✔';
+                position: absolute;
+                left: 10px;
+                top: 50%;
+                transform: translateY(-50%);
+            }
         }
     }
 
