--- a/dev/assets/styles/media/max-1200.scss
+++ b/dev/assets/styles/media/max-1200.scss
@@ -47,7 +47,7 @@
 
     .detailed-card-page {
         &__wrapper-info-main-container {
-            grid-template-columns: 1fr;
+            grid-template-columns: minmax(100px, 1fr);
             column-gap: 0;
             row-gap: 40px;
         }
@@ -69,7 +69,21 @@
         }
     }
 
+    .customer-reviews {
+        .main-container {
+            grid-template-columns: minmax(100px, 1fr);
+            grid-column-gap: 0;
+        }
+    }
+
     .page {
         overflow: hidden;
+    }
+
+    .objects {
+        &__block-cards {
+            grid-column-gap: 8px;
+            grid-row-gap: 8px;
+        }
     }
 }
