--- a/dev/pages/include/components/prices-apartments.html
+++ b/dev/pages/include/components/prices-apartments.html
@@ -4,6 +4,52 @@
             <h3 class="title-section title-reset">Prices for apartments</h3>
         </div>
         <div class="prices-apartments__block-content">
+            <table class="prices-apartments__table">
+                <thead>
+                    <tr>
+                        <td>Number of rooms</td>
+                        <td>Approximate m²</td>
+                        <td>Price per m²</td>
+                        <td>Price for everything</td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1-room</td>
+                        <td>from 300</td>
+                        <td>from 60,000 TL</td>
+                        <td>from 1,699,000 TL</td>
+                        <td>
+                            <a href="#" class="btn btn--size-sm btn--theme--light-blue">
+                                <span class="btn__text">See objects (88)</span>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2-room</td>
+                        <td>from 440</td>
+                        <td>from 55,000 TL</td>
+                        <td>from 2,800,000 TL</td>
+                        <td>
+                            <a href="#" class="btn btn--size-sm btn--theme--light-blue">
+                                <span class="btn__text">See objects (34)</span>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>3-room</td>
+                        <td>from 360</td>
+                        <td>from 75,000 TL</td>
+                        <td>from 3,990,000 TL</td>
+                        <td>
+                            <a href="#" class="btn btn--size-sm btn--theme--light-blue">
+                                <span class="btn__text">See objects (14)</span>
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
             
         </div>
     </div>
