--- a/dev/assets/styles/parts/components/layouts.scss
+++ b/dev/assets/styles/parts/components/layouts.scss
@@ -114,4 +114,10 @@
     .slider-btns {
         width: max-content;
     }
+
+    .select {
+        &__btn-text {
+            @include adaptiv-font(16, 14);
+        }
+    }
 }
