--- a/dev/pages/include/components/prices-apartments.html
+++ b/dev/pages/include/components/prices-apartments.html
@@ -16,10 +16,22 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1-room</td>
-                        <td>from 300</td>
-                        <td>from 60,000 TL</td>
-                        <td>from 1,699,000 TL</td>
+                        <td>
+                            <span>Number of rooms</span>
+                            <span>1-room</span>
+                        </td>
+                        <td>
+                            <span>Approximate m²</span>
+                            <span>from 300</span>
+                        </td>
+                        <td>
+                            <span>Price per m²</span>
+                            <span>from 60,000 TL</span>
+                        </td>
+                        <td>
+                            <span>Price for everything</span>
+                            <span>from 1,699,000 TL</span>
+                        </td>
                         <td>
                             <a href="#" class="btn btn--size-sm btn--theme--light-blue">
                                 <span class="btn__text">See objects (88)</span>
@@ -27,10 +39,22 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>2-room</td>
-                        <td>from 440</td>
-                        <td>from 55,000 TL</td>
-                        <td>from 2,800,000 TL</td>
+                        <td>
+                            <span>Number of rooms</span>
+                            <span>2-room</span>
+                        </td>
+                        <td>
+                            <span>Approximate m²</span>
+                            <span>from 440</span>
+                        </td>
+                        <td>
+                            <span>Price per m²</span>
+                            <span>from 55,000 TL</span>
+                        </td>
+                        <td>
+                            <span>Price for everything</span>
+                            <span>from 2,800,000 TL</span>
+                        </td>
                         <td>
                             <a href="#" class="btn btn--size-sm btn--theme--light-blue">
                                 <span class="btn__text">See objects (34)</span>
@@ -38,10 +62,22 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>3-room</td>
-                        <td>from 360</td>
-                        <td>from 75,000 TL</td>
-                        <td>from 3,990,000 TL</td>
+                        <td>
+                            <span>Number of rooms</span>
+                            <span>3-room</span>
+                        </td>
+                        <td>
+                            <span>Approximate m²</span>
+                            <span>from 360</span>
+                        </td>
+                        <td>
+                            <span>Price per m²</span>
+                            <span>from 75,000 TL</span>
+                        </td>
+                        <td>
+                            <span>Price for everything</span>
+                            <span>from 3,990,000 TL</span>
+                        </td>
                         <td>
                             <a href="#" class="btn btn--size-sm btn--theme--light-blue">
                                 <span class="btn__text">See objects (14)</span>
