--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -138,8 +138,7 @@ a {
                 content: '✔';
                 position: absolute;
                 left: 0;
-                top: 50%;
-                transform: translateY(-50%);
+                top: 0;
             }
         }
 
@@ -148,8 +147,7 @@ a {
                 content: '✔';
                 position: absolute;
                 left: 10px;
-                top: 50%;
-                transform: translateY(-50%);
+                top: 0;
             }
         }
     }
