--- a/dev/assets/styles/media/max-1200.scss
+++ b/dev/assets/styles/media/max-1200.scss
@@ -53,6 +53,17 @@
         }
     }
 
+    .banner {
+        &__content {
+            grid-template-columns: 1fr;
+            grid-row-gap: 12px;
+        }
+
+        .btn {
+            margin-top: 12px;
+        }
+    }
+
     .side-panel {
         width: 335px;
         margin: auto;
