--- a/dev/assets/styles/parts/components/master-plan.scss
+++ b/dev/assets/styles/parts/components/master-plan.scss
@@ -9,6 +9,7 @@
         position: relative;
         border-radius: 10px;
         overflow: hidden;
+        height: 550px;
     }
 
     &__slider-image {
