--- a/dev/assets/styles/parts/components/review.scss
+++ b/dev/assets/styles/parts/components/review.scss
@@ -17,6 +17,9 @@
     }
 
     &__li {
+        display: flex;
+        align-items: center;
+        
         &.active {
             .review__icon use {
                 fill: #FFB43C;
@@ -25,7 +28,7 @@
     }
 
     &__icon {
-        width: 18px;
+        width: 100%;
         height: 18px;
 
         use {
@@ -57,6 +60,7 @@
         p {
             @include adaptiv-font(16, 14);
             margin: 0;
+            line-height: 1.7em;
         }
     }
 
